--- a/package.json
+++ b/package.json
@@ -16,8 +16,11 @@
     "@vue/cli-plugin-eslint": "^4.2.0",
     "@vue/cli-service": "^4.2.0",
     "babel-eslint": "^10.0.3",
+    "bootstrap": "^4.0.0-beta",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.1.2",
+    "jquery": "^3.4.1",
+    "popper.js": "^1.16.1",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
